# ei-beginners

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: ARCHITECTURE.md  CODING_STYLE.md  FEATURE_PLAN_EXEC_EVAL.md
hw1/: hello_pybullet.py  note.md  test.py  test_advanced.py  test_basic.py  try-note.md  传统机器人学.md  正运动学.md  逆运动学.md
hw1/learn_codes/: test_advanced.py
hw2/: notes.md  train.py
hw2/basic/: agent_1.py  env_test.py  gymnasium_1.py  record_agents.py
hw2/basic/agent_results/: blackjack_q_table.pkl  training_stats_20250524_134133.pkl
hw2/basic/gymnasium_2_results/: q_table.pkl
hw2/pj/: pj1.py
hw2/pj1/: cartpole.py  log.txt  设计思路.md
hw3_task1/: main.py  requirements.txt  robot_apis.py
hw5_eai_eval/: prompt.json  workflow.md
learning_journey/: LEARNING_PATH.md
learning_journey/phase_01_pybullet_foundations/: README.md
learning_journey/phase_01_pybullet_foundations/notes/: forward_kinematics.md  inverse_kinematics.md  pybullet_workflow.md  robotics_fundamentals.md
learning_journey/phase_02_rl_foundations/: README.md  notes.md
learning_journey/phase_02_rl_foundations/gymnasium_basics/: env_1.py  (+1 more)
learning_journey/phase_03_embodied_control/: README.md
learning_journey/phase_04_eai_evaluation/: README.md
src/ei_beginners/: __init__.py  cli.py
tests/: conftest.py
tests/e2e/: test_learning_journey_regression.py  test_quality_gate_config.py
tests/integration/: test_bc_training.py  test_plan_execute_eval.py  test_rl_trainers.py
tests/unit/: test_action_schema.py  test_metrics.py  test_robot_api_bounds.py  test_rule_planner.py
(+30 files in other folders)
